--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -1,18 +1,17 @@
 #cont{
-    margin-top: 100px;
+    margin-top: 50px;
 }
-td{
-    float: left;
-    margin: 6px;
-}
+
 .td1{
-    color: rgb(235, 137, 46)
+    color: rgb(85, 82, 76);
+    float: left;
 }
 span{
-    color: rgb(235, 177, 124)
+    color: rgb(68, 66, 63)
 }
-.profiles{
-    border: 1px solid #9C9C9C;
-    background-color: rgb(70, 58, 58);
-    box-shadow: 0px 0px 9px rgb(29, 28, 28);
+.tab{
+    border: 2px solid grey
+}
+.thset{
+    background-color: aliceblue
 }
