--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -2,25 +2,26 @@
     <div id="login">
         <div class="container">
             <div id="login-row" class="row justify-content-center align-items-center">
-                <div id="login-column" class="col-md-6">
+                <div id="login-column" class="col-md-4">
                     <div id="login-box" class="col-md-12">
                         <form id="login-form" class="form" name="addfrm" #form1='ngForm'>
                             <h3 class="text-center text-info">Login</h3>
                             <div class="form-group">
-                                <label for="username" class="text-info">Username:</label><br>
+                                <label for="username" class="text-info">Email:</label><br>
                                 <input type="email" #pname="ngModel" name="email" [(ngModel)]="email" id="username"
-                                    class="form-control" required (blur)="focusMethod()" email>
+                                    class="form-control" required (blur)="focusMethod()" email placeholder="Email">
                                 <span *ngIf="pname.errors && pname.errors.required" style="font-size:12px;color:red;position: fixed">{{msg1}}</span>
                                 <span *ngIf="pname.errors && pname.errors.email" style="font-size:12px;color:red;position: fixed">{{focus}}</span>
                             </div>
                             <div class="form-group">
                                 <label for="password" class="text-info">Password:</label><br>
-                                <input type="password" #pass="ngModel" name="pass" [(ngModel)]="password" id="password"
+                                <input type="password" #pass="ngModel" placeholder="Password" name="pass" [(ngModel)]="password" id="password"
                                     class="form-control" required>
                                 <span *ngIf="pass.errors && pass.errors.required" style="font-size:12px;color:red;position: fixed">{{msg2}}</span>
                             </div><br>
                             <div class="form-group">
-                                <input type="button" name="submit" class="btn btn-info btn-md" value="LogIn" (click)="funLogin(form1)">
+                                <input type="button" name="submit" class="btn btn-info btn-md" value="LogIn" (click)="funLogin(form1)"> &nbsp;&nbsp;&nbsp;
+                                <input type="button" name="submit" class="btn btn-secondary" value="Registration" (click)="gotoReg()">
                             </div>
                         </form>
                     </div>
