--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<router-outlet>
-</router-outlet>
+<app-menu></app-menu>
+<app-search></app-search>
+<app-banner></app-banner>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
