--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@ng-select/ng-select/themes/default.theme.css";
+.smTitle{
+    color: rgba(127, 174, 236, 0.897);
+    padding: 8px;
+    font-size: 10px;
+    font-weight: bold;
+    font-family: inherit;
+    cursor: pointer;
+}
