--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -9,6 +9,7 @@
 .bg-darks {
     background-color: rgba(35, 48, 63, 0.61);
 }
+
 .sp1{
     color: rgb(255, 102, 0);
     font-weight: bold;
@@ -32,19 +33,30 @@
 }
 
 .navlink:hover{
-    background-color: #2d2f2dc9;
     list-style: none;
     text-decoration: none;
     color: whitesmoke;
-    border-bottom: 3px solid red
+    border-bottom: 1px solid rgb(94, 255, 0);
+    border-top: 1px solid rgb(94, 255, 0);
+    border-radius: 4px;
+}
+#snupp{
+     color: whitesmoke;;
+}
+.stlset{
+    color: rgb(241, 245, 243);
+    cursor: pointer;
+    margin-top: 0px;
+    font-size: 25px;
+    position: relative;
 }
 .navlink{
-    padding: 8px;
+    /* padding: 8px; */
     color: whitesmoke;
     font-family: cursive;
     line-height: 24px;
     text-transform: none;
-    margin-left: 20px;
+    margin: 10px;
 }
 .socialItem{
     vertical-align: middle;
