--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -1,4 +1,4 @@
-<body>
+<!-- <body>
     <div id="login">
         <div class="container">
             <div id="login-row" class="row justify-content-center align-items-center">
@@ -7,17 +7,19 @@
                         <form id="login-form" class="form" name="addfrm" #form1='ngForm'><br>
                             <h3 class="" style="color: rgb(233, 249, 250)">Login</h3>
                             <div class="form-group">
-                                <!-- <label for="username" class="text-info">Email:</label><br> -->
+                                
+                                
                                 <input type="email" #pname="ngModel" name="email" [(ngModel)]="email" id="username"
                                     class="form-control" required (blur)="focusMethod()" email placeholder="Email">
-                                <span *ngIf="pname.errors && pname.errors.required" style="font-size:12px;color:red;position: fixed">{{msg1}}</span>
-                                <span *ngIf="pname.errors && pname.errors.email" style="font-size:12px;color:red;position: fixed">{{focus}}</span>
+                                <span *ngIf="pname.errors && pname.errors.required" style="font-size:12px;color:red;position: relative">{{msg1}}</span>
+                                <span *ngIf="pname.errors && pname.errors.email" style="font-size:12px;color:red;position: relative">{{focus}}</span>
                             </div>
                             <div class="form-group">
-                                <!-- <label for="password" class="text-info">Password:</label><br> -->
+                                
+                                
                                 <input type="password" #pass="ngModel" placeholder="Password" name="pass" [(ngModel)]="password" id="password"
                                     class="form-control" required>
-                                <span *ngIf="pass.errors && pass.errors.required" style="font-size:12px;color:red;position: fixed">{{msg2}}</span>
+                                <span *ngIf="pass.errors && pass.errors.required" style="font-size:12px;color:red;position: relative">{{msg2}}</span>
                             </div><br>
                             <div class="form-group">
                                 <input type="button" name="submit" class="btn btn-info btn-md" value="LogIn" (click)="funLogin(form1)"> &nbsp;&nbsp;&nbsp;
@@ -29,4 +31,46 @@
             </div>
         </div>
     </div>
-</body>
+</body> -->
+
+<div class="wrapper fadeInDown">
+    <div id="formContent">
+        <!-- Tabs Titles -->
+
+        <!-- Icon -->
+        <div class="fadeIn first">
+            <img src="/src/assets/logo/final.png" id="icon" alt="User Icon" />
+            <h3>Login Securly !</h3>
+        </div>
+
+        <!-- Login Form -->
+        <form>
+            <div id="login-column">
+                <div id="login-box" class="col-md-12">
+                    <form id="login-form" class="" name="addfrm" #form1='ngForm' style="padding: 18px;">
+                        <div class="form-group">
+                            <input type="email" #pname="ngModel" name="email" [(ngModel)]="email" id="username"
+                                class="form-control shadow-none login-input" required (blur)="focusMethod()" email placeholder="Email">
+                            <span *ngIf="pname.errors && pname.errors.required"
+                                style="font-size:12px;color:red;position: relative;float: left;">{{msg1}}</span>
+                            <span *ngIf="pname.errors && pname.errors.email"
+                                style="font-size:12px;color:red;position: relative;float: left;">{{focus}}</span>
+                        </div>
+                        <div class="form-group">
+                            <input type="password" #pass="ngModel" placeholder="Password" name="pass"
+                                [(ngModel)]="password" id="password" class="form-control shadow-none login-input" required>
+                            <span *ngIf="pass.errors && pass.errors.required"
+                                style="font-size:12px;color:red;position: relative;float: left;">{{msg2}}</span>
+                        </div><br>
+                        <div class="form-group float-left">
+                            <input type="button" name="submit" class="btn btn-info btn-md btn-md-set shadow-none" value="LogIn"
+                                (click)="funLogin(form1)"> &nbsp;&nbsp;&nbsp;
+                            <input type="button" name="submit" class="btn btn-secondary btn-md-set shadow-none" value="Registration"
+                                (click)="gotoReg()">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
